Prevent zoom on rapid tapping on mobile
Useful when skipping forward or back through frames in a replay

--- a/wwwroot/css/Global.css
+++ b/wwwroot/css/Global.css
@@ -20,6 +20,10 @@
     overflow: hidden;
 }
 
+* {
+    touch-action: manipulation;
+}
+
 body {
     display: flex;
     flex-direction: column;
